<resources>
    <string name="app_name">JUARAI</string>
    <string name="labelName">Name</string>
    <string name="labelNIK">NIK</string>
    <string name="labelBirthdate">Tanggal Lahir</string>
    <string name="labelBirthplace">Tempat Lahir</string>
    <string name="labelAddress">Alamat</string>
    <string name="labelMale">Laki - Laki</string>
    <string name="labelFemale">Perempuan</string>
    <string name="labelRT">RT</string>
    <string name="labelRW">RW</string>
    <string name="labelKelurahan">Kelurahan</string>
    <string name="labelKecamatan">Kecamatan</string>
    <string name="labelGoldar">Golongan Darah</string>
    <string name="labelGender">Jenis Kelamin</string>
    <string name="labelReligion">Agama</string>
    <string name="labelOccupation">Pekerjaan</string>
    <string name="next">Selanjutnya</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titlebar">Daftar E-KTP</string>
    <string name="acceptance">Apakah Data yang ditampilkan sudah benar? dan ingin melanjutkan?</string>
</resources>