<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DF5555"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlebar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#ECE28A"
        android:elevation="20dp"
        app:cardCornerRadius="8dp"
        app:rippleColor="#FF8F00"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="@string/labelName"/>

            <TextView
                android:id="@+id/tv_nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:text="@string/labelNIK"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#4CAF50"
                app:layout_constraintTop_toBottomOf="@id/tv_nik"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:text="Processed"/>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="register.json"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mulai daftar"
        app:layout_constraintTop_toBottomOf="@id/lottie_register"
        app:layout_constraintStart_toStartOf="@id/lottie_register"
        app:layout_constraintEnd_toEndOf="@id/lottie_register" />

</androidx.constraintlayout.widget.ConstraintLayout>